[gd_scene load_steps=10 format=2]

[ext_resource path="res://audio/button05.mp3" type="AudioStream" id=1]
[ext_resource path="res://objects/teleporter.gd" type="Script" id=2]
[ext_resource path="res://test/teleporter2.tscn" type="PackedScene" id=3]
[ext_resource path="res://theme/font/NotoSansSC-VariableFont_wght.ttf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 156, 36 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.152941, 0.407843, 0.529412, 1 )
skew = Vector2( 0.377, 0 )
corner_radius_top_left = 52
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9
shadow_size = 10

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 156, 36 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.152941, 0.407843, 0.529412, 1 )
skew = Vector2( 0.377, 0 )
corner_radius_top_left = 52
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9
shadow_size = 10

[sub_resource type="DynamicFont" id=5]
size = 41
outline_size = 5
outline_color = Color( 0.305882, 0.309804, 0.388235, 0.654902 )
font_data = ExtResource( 4 )

[node name="main_menu" type="Node"]

[node name="teleporter" type="Area2D" parent="."]
script = ExtResource( 2 )
target_path = "res://scene/player_character.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="teleporter"]
position = Vector2( 644, 252 )
shape = SubResource( 1 )

[node name="Panel" type="Panel" parent="teleporter"]
margin_left = 500.0
margin_top = 216.0
margin_right = 788.0
margin_bottom = 280.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="teleporter2" parent="." instance=ExtResource( 3 )]

[node name="teleporter3" type="Area2D" parent="."]
position = Vector2( 0, -112 )
script = ExtResource( 2 )
target_path = "res://scene/player_character.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="teleporter3"]
position = Vector2( 644, 252 )
shape = SubResource( 3 )

[node name="Panel" type="Panel" parent="teleporter3"]
margin_left = 504.0
margin_top = 216.0
margin_right = 788.0
margin_bottom = 280.0
mouse_filter = 2
custom_styles/panel = SubResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 600.0
margin_top = 104.0
margin_right = 682.0
margin_bottom = 164.0
custom_colors/font_color = Color( 0.286275, 0.34902, 0.356863, 1 )
custom_colors/font_outline_modulate = Color( 0.721569, 0.92549, 0.933333, 1 )
custom_colors/font_color_shadow = Color( 0.294118, 0.647059, 0.913725, 1 )
custom_fonts/font = SubResource( 5 )
text = "开始"

[node name="Label2" type="Label" parent="."]
margin_left = 600.0
margin_top = 216.0
margin_right = 682.0
margin_bottom = 276.0
custom_colors/font_color = Color( 0.286275, 0.34902, 0.356863, 1 )
custom_colors/font_outline_modulate = Color( 0.721569, 0.92549, 0.933333, 1 )
custom_colors/font_color_shadow = Color( 0.294118, 0.647059, 0.913725, 1 )
custom_fonts/font = SubResource( 5 )
text = "保存"

[node name="Label3" type="Label" parent="."]
margin_left = 600.0
margin_top = 344.0
margin_right = 682.0
margin_bottom = 404.0
custom_colors/font_color = Color( 0.286275, 0.34902, 0.356863, 1 )
custom_colors/font_outline_modulate = Color( 0.721569, 0.92549, 0.933333, 1 )
custom_colors/font_color_shadow = Color( 0.294118, 0.647059, 0.913725, 1 )
custom_fonts/font = SubResource( 5 )
text = "退出"

[node name="button_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -0.376
pitch_scale = 0.95

[node name="Tween" type="Tween" parent="."]

[connection signal="mouse_entered" from="teleporter" to="teleporter" method="_on_teleporter_mouse_entered"]
[connection signal="mouse_exited" from="teleporter" to="teleporter" method="_on_teleporter_mouse_exited"]
[connection signal="mouse_entered" from="teleporter3" to="teleporter3" method="_on_teleporter_mouse_entered"]
[connection signal="mouse_exited" from="teleporter3" to="teleporter3" method="_on_teleporter_mouse_exited"]
